cabal-version: >= 1.8
build-type: Simple
name: DaikonUtilsLib
version: 0
license: BSD3
maintainer: Wishnu Prasetya <s.w.b.prasetya@uu.nl>
description: A library of utilities to do simple processing on Daikon logs.
stability: Experimental
synopsis: A library of utilities to do simple processing on Daikon logs.
copyright: Universiteit Utrecht

library
  build-depends: base >= 4, base < 5
  build-depends: attoparsec >= 0.10.1.1, text >= 0.11.0.6
  
  exposed-modules: Eu.DaikonUtils.DaikonSimpleParser
  
  hs-source-dirs: src
  ghc-options:  -O2  
                -static -optc-static -optl-static -optl-pthread
  -- uncoment the options below to enable profiling:                
  -- ghc-prof-options: -prof
  --                  -auto-all
  --                  -caf-all 
  -- add this options to build static binary
  -- -static -optc-static -optl-static -optl-pthread
 

