cabal-version: >= 1.6
build-type: Simple
name: varsfilter
version: 0.0
license: BSD3
license-file: LICENSE
maintainer: Wishnu Prasetya <S.W.B.Prasetya@uu.nl>
description: To filter out some variables from a daikon log.
synopsis: To filter out some variables from a daikon log.
category: Logging
stability: Experimental
copyright: Universiteit Utrecht
author: Software Technology group at Utrecht University
bug-reports: s.w.b.prasetya@uu.nl
tested-with: GHC >= 6.12

executable varsfilter
  build-depends: base >= 4, base < 5
  build-depends: DaikonUtilsLib >= 0
  build-depends: text >= 0.11.0.6
  main-is: Main.hs
  hs-source-dirs: src
  ghc-options: -O2 -rtsopts=all 
  -- ghc-prof-options: -prof -auto-all -caf-all 
